tests/negative/gold/uninitialized_loopvar_test.gold
tests/negative/uninitialized_loopvar_test.toit:15:19: error: Can't assign '?' to condition loop variable
  while local ::= ?:
                  ^
tests/negative/uninitialized_loopvar_test.toit:19:19: error: Can't assign '?' to condition loop variable
  while local ::= ?:
                  ^
tests/negative/uninitialized_loopvar_test.toit:23:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/uninitialized_loopvar_test.toit:11:33: error: Can't assign to final local
  for local ::= ?; i < 3; local = 499:
                                ^
tests/negative/uninitialized_loopvar_test.toit:17:11: error: Can't assign to final local
    local = 499
          ^
tests/negative/uninitialized_loopvar_test.toit:21:13: error: Can't assign to final local multiple times
      local = 499
            ^
Compilation failed.
